# dwd

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  buildraw.py  check_for_markers.py  checkfiledate.py  getfilesDWD.py  pyproject.toml  unzipfiles.py
.gitlab/: changelog_config.yml
conf/: __init__.py
dwd/: __init__.py
dwd/libs/: __init__.py
pip/: release_requirements.txt
tests/: conftest.py  test_dummy.py
