[tool.poetry]
name = "dwd"
version = "1.0.0"  # Will be incremented via CI
description = "code regarding dwd weatherdata"
authors = ["Analytics Suite <noemail@rtl.de>"]
license = "Proprietary"
readme = "README.md"
keywords = ["AS-919"]

[[tool.poetry.source]]
name = "analyticsb2b__apps__common"
url = "https://gitlab.com/api/v4/projects/39939248/packages/pypi/simple"
default = false
secondary = true

[[tool.poetry.source]]
name = "analyticsb2b__apps__apps_base"
url = "https://gitlab.com/api/v4/projects/39434577/packages/pypi/simple"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
fsspec = "~2022.5"
gcsfs = "~2022.5"
google-cloud-bigquery = "~3.2"
google-cloud-storage = "~2.4"
pandas = "~1.4"
common = { version = "1.3.0", source = "analyticsb2b__apps__common" }
apps-base = { version = "1.2.0", source = "analyticsb2b__apps__apps_base" }

[tool.poetry.dev-dependencies]
pre-commit = "2.19.0"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-helpers-namespace = "2021.12.29"
pytest-mock = "3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
